--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
-    <title>www.machpitt.com</title>
+    <title>Machpitt</title>
     <meta charset="UTF-8"/>
     <meta name="keywords" content="programação, html, css, apache, php"/>
     <meta name="viewport" content="width=devide-width, initial-scale=1,0"/>
